fixed load in index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-	<body>
+	<body onload="load()">
 	<h2 id="whatsNext">loading, please wait</h2>
 	<h1 id="time">loading, please wait</h1>
 	<button onclick="swapLunch(1)">a</button>
