semicollon index.html

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		
 		
 		function swapLunch(lunchChar){
-			lunchPeriod = lunchChar
+			lunchPeriod = lunchChar;
 			alert(lunchPeriod);
 			load();
 		}
