--- a/index.html
+++ b/index.html
@@ -97,19 +97,19 @@
 		function TimeToReadableString(time){
 			let string = "";
 			if((time%86400000)>=3600000){
-				string += (Math.floor(time%86400000)/3600000);
+				string += "" + Math.floor(time%86400000)/3600000);
 			}
 			if((time%86400000)>=3600000 && (time%3600000)>=60000) {
 				string += " : ";
 			}
 			if((time%3600000)>=60000){
-				string += (Math.floor(time%3600000)/60000);
+				string += "" + Math.floor(time%3600000)/60000);
 			}
 			if((time%3600000)>=60000 && (time%60000)>=1000){
 				string += " : ";
 			}
 			if((time%60000)>=1000){
-				string += (Math.floor((time%60000)/1000);
+				string += "" + Math.floor((time%60000)/1000);
 			}
 		}
 		
